corrections are complete

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1506,9 +1506,9 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \begin{entry}
 \word{samarasasuKa pariNAmi}
 \src{va}
-\meaning{\arthanonum{aikayxsathxlada sAdhakanu tananx sadABxva eMba hasatxdalilx mahAliMgavanunx kaMDu samarasaveMba BakitxyanAnxcarisuvAga avanige uMTAguva suKaveV samarasasuKa. samarasasuKapariNAmiyAda Ata elelxlUlx parashivananenxV kANutAtxne (va.pa.koV. 398):}
-\ullekha{samarasasuKapariNAmiyAgi muMde noVDutatx suLiyutidaR guru\-niraMjana cananxbasavaliMgavenanx pArxNaliMgiyedenisi (savasaM. 12; \hbox{deVshikeVM.} 455-138).}}
-\newmeaning{\ni{samarasasuKeV pariNAmaH asimxnaf asitx iti - samarasasuKapariNAmiV}}
+\meaning{\arthanonum{aikayxsathxlada sAdhakanu tananx sadABxva eMba hasatxdalilx mahAliMgavanunx kaMDu samarasaveMba BakitxyanAnxcarisuvAga avanige uMTAguva suKaveV samarasasuKa. samarasa\-suKapariNAmiyAda Ata elelxlUlx parashiva\-nanenxV kANutAtxne:}
+\ullekha{samarasasuKapariNAmiyAgi muMde noVDutatx suLiyutidaR guru\-niraMjana cananxbasavaliMgavenanx pArxNaliMgiyadenisi (savasaM. 12; \hbox{deVshikeVM.} 455-138).}}
+\newmeaning{\ni{samarasasuKeV pariNAmaH asimxnaf asitx iti - samarasa\-suKapariNAmiV}}
 \end{entry}
 
 \begin{entry}
@@ -1521,7 +1521,7 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \begin{entry}
 \word{savxtaMtirxyalalx, parataMtirxyalalx}
 \src{va}
-\meaning{\arthanonum{sAmAnayxvAgi AdhAyxtimxka pathadalilx naDeyalu pArxraMBisidavanu tananxnunx parataMtirxyeMdU, paramAtamxnanunx savxtaMtirxyeMdU bagedu tananx Bakitxyanunx toVrisutitxrutAtxne. iveraDU padagaLu sApeVkaSx padagaLu. yAvudeV vasutx athavA vayxkitx savxtaMtarx eninxsi\-koLaLxbeVkAdare, savxtaMtarxvalalxda hAgU tananxnunx avalaMbisuva vasutxgaLu, vayxkitxgaLu irabeVkAgutatxde. savxtaMtarxvAda oMdeV vasutxvidudx adananxvalaMbisuva yAvudeV vasutxvilalxdidadxre, A \hbox{vasutx} savxtaMtarxvU alalx, parataMtarxvU alalx. adeV riVti yAvudeV vasutx parataMtarxveninxsikoLaLxbeVkAdare, adakekx Asharxya koDuva vasutx irabeVkAgutatxde. ivugaLa saMbaMdhavanunx tAyi-magu saMbaMdhakekx hoVlisabahudu. tAyi eninxsikoLaLxbeVkAdare avaLige maguvirabeVkAgutatxde, hAgeyu magu irabeVkAdare tAyi irabeVkAgutatxde. Adare liMgAMgasAmarasayxda mUlaka paramAtamxnanunx sAvxnuBAvadiMda aritare, A paramAtamx savxtaMtirxyalalx, aritavanu parataMtirxyalalx. EkeMdare sAmarasayxdalilx jAcnxtaq jecnxVyagaLa saMbaMdha aLisihoVgutatxde (va.pa.koV. 422):}
+\meaning{\arthanonum{sAdhakanu tananxnunx parataMtirxyeMdU, paramAtamxnanunx savxtaMtirxyeMdU bagedu tananx Bakitxyanunx toVrisutitxrutAtxne. yAvudeV vasutx athavA vayxkitx savxtaMtarx eninxsi\-koLaLxbeVkAdare, Atananunx avalaMbisuva vasutxgaLu, vayxkitxgaLu irabeVkAgutatxde. savxtaMtarxvAda oMdeV vasutxvidudx adananxvalaMbisuva yAvudeV vasutxvilalxdidadxre, A \hbox{vasutx} savxtaMtarxvU alalx, parataMtarxvU alalx. adeV riVti yAvudeV vasutx parataMtarxveninxsikoLaLxbeVkAdare, adakekx Asharxya koDuva vasutx irabeVkAgutatxde. ivugaLa saMbaMdhavanunx tAyi-magu saMbaMdhakekx hoVlisabahudu. tAyi eninxsikoLaLxbeVkAdare avaLige maguvirabeVkAgutatxde, hAgeyeV magu irabeVkAdare tAyi irabeVkAgutatxde. Adare liMgAMgasAmarasayxda mUlaka paramAtamxnanunx sAvxnuBAvadiMda aritare, A paramAtamx savxtaMtirxyalalx, aritavanu parataMtirxyalalx. EkeMdare sAmarasayxdalilx jAcnxtaq, jecnxVyagaLa saMbaMdha aLisihoVgutatxde:}
 \ullekha{taninxMdarivaDe savxtaMtirxyalalx, idiriniMdarivaDe parataMtirxyalalx I uBayavaninxnAnxrige heVLuve? kaDaloLage kareda vAriyaMte, niHkaLaMka malilxkAjuRna (savasaM. 8; moVLimA. 1551-517).}}
 %\ullekha{niVvADisuva yaMtarxda taMtarxvalalxde savxtaMtirxyalalx... (savasaM. 7; guparxmaM. 360-122); nA naDevaDe savxtaMtirxyalalx... (savasaM. 8; manugu. 1083-365); nAnaridu kaMDeheneMdaDe savxtaMtirxyalalx. (savasaM. 8; moVLige. 1848-602); nAneMdaDe savxtaMtirxyalalx... (savasaM. 8; madhuva. 843-302).}}
 \end{entry}
@@ -1529,37 +1529,30 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \begin{entry}
 \word{savxyaMparxkAsha kicucx}
 \src{va}
-\meaning{\arthanonum{anuBAviyu tananx anuBAvada oMdu haMtadalilx tAnu citetxMbudanunx ariyutAtxne. A citutx atayxMta parxkAshamAnavAda uriya (diVpada) rUpadalilx avanige kANisikoLuLxtatxde. nAvu kaNiNxniMda noVDida vasutxgaLu tamamx parxkAshavanunx beVroMdu vasutxviniMda paDedare, citetxMba joyxVtiyu savxyaMparxkAshavAgide (parashivaneV savxyaMparxkAshamAnavAda paraMjoyxVti):}
-\ullekha{uri hoge naMditutx, savxyaM parxkAsha\-vAgipapx uri uLiyitutx. A uri baMdu enanx karasathxladalalxDagitutx (savasaM. 9; saMgameV. 280-93).}}
+\meaning{\arthanonum{anuBAviyu tananx anuBAvada oMdu haMtadalilx tAnu citetxMbudanunx ariyutAtxne. A citutx atayxMta parxkAshamAnavAda uriya (diVpada) rUpadalilx avanige kANisikoLuLxtatxde. nAvu noVDuva vasutxgaLu tamamx parxkAshavanunx beVroMdu vasutxviniMda paDedare, citetxMba joyxVtiyu savxyaMparxkAshavAgide (parashivaneV savxyaMparxkAshamAnavAda paraMjoyxVti):}
+\ullekha{uri hoge naMditutx, savxyaMparxkAsha\-vAgipapx uri uLiyitutx. A uri baMdu enanx karasathxladalalxDagitutx (savasaM. 9; saMgameV. 280-93).}}
 %\ullekha{savxyaMparxkAsharUpashacx jaMgamoVhi nigadayxteV... (savasaM. 1; basava. 1367-377); savxyaMparxkAshaliMgadalilx sadAsaninxhita kUDalacenanxsaMgayayx nimamx sharaNa. (savasaM. 3; cenanxba. 375-119); manada koneya moneya meVlaNa aMdina kaNaNx muMde savxyaMparxkAsha toVrutitxdadxDe tAnAgabalalxne?... (savasaM. 5; mukAtxya. 1102-326); beLage toVrisuva beLagoMDilalxvAgi savxyaMparxkAsha paripUNaRvAda nijavu nineV. (savasaM. 7; caMdima. 555-184); savxyaMparxkAshaliMgadalilx savxyaMjAcnxni niMdu savxyava toVrutihanu noVDA. (savasaM. 10; jakakxNa. 1530-678).}}
 \end{entry}
 
 \begin{entry}
 \word{sAvadhAnasuKapariNAmi}
 \src{va}
-\meaning{\arthanonum{parxsAdiya sAdhakanu shivaliMgavanunx tananx nirahaMkAraveMba hasatxdalilx kaMDu sAvadhAnaveMba Bakitxyanunx AcarisuvAga avanige tananx sumana hasatxdalilx muMdina sathxlada jaMgamaliMgavu kANisikoLuLxtatxde (va.pa.koV. 409):}
+\meaning{\arthanonum{parxsAdisathxlada sAdhakanu tananx nirahaMkAraveMba hasatxdalilx shivaliMgavanunx kaMDu sAvadhAnaveMba Bakitxyanunx AcarisuvAga avanige tananx sumana hasatxdalilx muMdina sathxlada jaMgamaliMgavu kANisikoLuLxtatxde:}
 \ullekha{sAvadhAna suKapariNAmiyAgi muMde noVDutatx suLiyutidaR jaMgamaliMgavenanx sumanahasatxdalilx (savasaM. 12; deVshikeVM. 455-143).}}
 \end{entry}
 
 \begin{entry}
 \word{sAvxnuBAva sananxdadhx}
 \src{va}
-\meaning{\arthanonum{jAcnxnaveMba beLakanunx nAvu noVDabeVkAdare adu pUje matitxtara kirxyegaLiMda sAdhayx\-vilalx. sharxdedhxyanunx beLesikoLaLxlu avu modalu AvashayxkavAdarU aveV koneyAgalAravu. jAcnxnada beLaganunx kANa\-beVkAdare koneyalilx sAvxnuBAva Avashayxka. kirxyegaLu namamxnunx sAtivxkaranAnxgi mADadidadxre sAvxnuBAva sAdhayxvilalx. sAvxnuBAvadalilx nAvu kANuva beLagu horaginadalalx, namamxlelxV avayxkatxvAgiruva beLaku (va.pa.koV. 424):}
-\ullekha{sharaNa tatigaLiMda karaNaMgaLa nivArisi-iMtapapx kirxyApUje, bAhayxda sharxdedhx, jAcnxnada beLagu, sAvxnuBAva sananxdadhx (savasaM 5, moVLige 946-302).}}
+\meaning{\arthanonum{jAcnxnaveMba beLakanunx pUje matitxtara kirxyegaLiMda noVDalu sAdhayx\-vilalx. adakekx sAvxnuBAva Avashayxka. kirxyegaLu namamxnunx sAtivxkaranAnxgi mADadidadxre sAvxnuBAva sAdhayxvilalx. sAvxnuBAvadalilx nAvu kANuva beLagu horaginadalalx, namamxlelxV avayxkatxvAgiruva beLaku:}
+\ullekha{sharaNatatigaLiMda karaNaMgaLa nivArisi iMtapapx kirxyApUje, bAhayxda sharxdedhx, jAcnxnada beLagu, sAvxnuBAva sananxdadhx (savasaM 5, moVLige 946-302).}}
 \end{entry}
 
 \begin{entry}
 \word{suKava nishecxYvudu}
 \src{va}
-\meaning{\arthanonum{nishecxYsuvudu eMbudakekx KacitapaDisuvudu eMba sAmAnayx athaRvidadxrU, aneVka veVLe sAdhisuvudu, sAkASxtakxrisikoLuLxvudu eMba athaRdalilxyU adanunx baLasalAgutatxde. suMkada baMkaNaNxnu `suKavanunx nishecxYsalilalx, adu duHKakekx biVja' eMdu heVLuvAga adakekx `suKavanunx sAdhisidare, adu duHKakekx kAraNavAgutatxde' eMbathaRvide. suKavu heVge duHKakekx kAraNavAgutatxde eMbudu kelavara parxshenx. adakekx AdhAyxtimxka jiVvana naDesuvavara anuBavada utatxra hiVgide: nAvu suKa paTaTx meVle adanunx matetx matetx paDeyabeVkeMba Ase uMTAgutatxde. adanunx paDeyuvavaregU namage duHKa (kaSaTx) uMTAgutatxde. atiyAda suKadiMda namamx AroVgayx hALAgi, AgalU duHKa uMTAgabahudu. hiVge, suKavanunx sAdhisuvudariMda konege duHKa uMTAgutatxde eMba anuBavigaLa nuDiyalilx sAkaSuTx satayxvide (namamx suKavu kelavu veVLe itararige duHKa uMTumADutatxde) (va.pa.koV. 410).}
+\meaning{\arthanonum{nishecxYsuvudu eMbudakekx KacitapaDisuvudu eMba sAmAnayx athaRvidadxrU, aneVka veVLe sAdhisuvudu, sAkASxtakxrisikoLuLxvudu eMba athaRdalilxyU adanunx baLasalAgutatxde. suMkada baMkaNaNxnu `suKavanunx nishecxYsalilalx, adu duHKakekx biVja' eMdu heVLuvAga adakekx `suKavanunx sAdhisidare, adu duHKakekx kAraNavAgutatxde' eMba parxshenxge utatxra hiVgide: nAvu suKa paTaTx meVle adanunx matetx matetx paDeyabeVkeMba Ase uMTAgutatxde. adanunx paDeyuvavaregU namage duHKa (kaSaTx) uMTAgutatxde. atiyAda suKadiMda namamx AroVgayx hALAgi, AgalU duHKa uMTAgabahudu. hiVge, suKavanunx sAdhisuvudariMda konege duHKa uMTAgutatxde eMba anuBavigaLa nuDiyalilx sAkaSuTx satayxvide (namamx suKavu kelavu veVLe itararige duHKa uMTumADutatxde) (va.pa.koV. 410).}
 \ullekha{suKava nishecxYsalilalx, adu duHKakekx biVja. duHKava nishecxYsalilalx, suKadoDalu (savasaM. 9; suMkada. 622-196).}}
-\end{entry}
-
-\begin{entry}
-\word{sujAcnxnaleVpa gArxhakasharaNa}
-\src{va}
-\meaning{\arthanonum{sharaNasathxlada sAdhakanu AkAsha eMba tananx aMgadalilxruva sujAcnxna eMba hasatxdiMda parxsAdaliMgada bAyiyAda shorxVtarxgaLige(kivi) shabadxvanunx apiRsutAtxne. aMdare, tananx kivigaLalelxV avanu parxsAdaliMgavanunx parxtiSAThxpisiruvudariMda, avana kivigaLige keVLisuva shabadxgaLelalxvU avugaLalilxruva parxsAdaliMgakekx apiRtavAdaMteyeV. hiVge sharaNanu tananx sujAcnxnavanunx leVpisikoMDu parxsAdaliMgavanunx garxhisiruvudariMda, avanu sujAcnxnaleVpagArxhaka sharaNa enisikoLuLxtAtxne, aMtha sharaNanu mahAliMgadalilx aikayxvAgutAtxne.}
-\ullekha{parxsAdaliMgAMga sujAcnxnaleVpagArxhaka aikayx aBeVdAnaMda paripUNaRmayavAda (savasaM. 3; cenanxba. 1412-504).}}
 \end{entry}
 
 \begin{entry}
@@ -1572,7 +1565,7 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \begin{entry}
 \word{sumanaleVpagArxhaka pArxNaliMgi}
 \src{va}
-\meaning{\arthanonum{pArxNaliMgisathxladalilx sAdhakanu `vAyu' eMba tananx aMgadalilxruva sumana eMba hasatxdiMda jaMgamaliMgada bAyiyAda tavxgiMdirxyakekx sapxshaRvanunx apiRsutAtxne. aMdare, tananx camaRdalelx avanu jaMgamaliMgavanunx parxtiSAThxpisiruvudariMda, avana camaRvu paDeyuva savxshaRnavelalxvU adaralilxruva jaMgamaliMgakekx apiRtavAdaMteyeV. hiVge pArxNaliMgiyu tananx sumanavanunx leVpisi\-koMDu jaMgamaliMgada gArxhakanAgiruvudariMda, avana sumanaleVpagArxhakaneMdu kareyalAgutatxde. avanu muMde parxsAdaliMgadalilx aikayxvAgutAtxne:}
+\meaning{\arthanonum{pArxNaliMgisathxladalilx sAdhakanu `vAyu' eMba tananx aMgadalilxruva sumana eMba hasatxdiMda jaMgamaliMgada bAyiyAda tavxgiMdirxyakekx sapxshaRvanunx apiRsutAtxne. aMdare, tananx camaRdalilxyeV avanu jaMgama\-liMgavanunx parxtiSAThxpisiruvudariMda, avana camaRvu paDeyuva sapxshaRvelalxvU adaralilxruva jaMgamaliMgakekx apiRtavAdaMteyeV. hiVge pArxNaliMgiyu tananx sumanavanunx leVpisi\-koMDu jaMgamaliMgada gArxhakanAgiruvudariMda, avananunx sumanaleVpagArxhakaneMdu kareyalAgutatxde. avanu muMde parxsAdaliMgadalilx aikayxvAgutAtxne:}
 \ullekha{jaMgamaliMgAMga sumanaleVpagArxhaka sharaNa mahAliMgavAda (savasaM. 3; cenanxba. 1412-504).}}
 \end{entry}
 
@@ -1580,8 +1573,8 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \begin{entry}
 \word{huTuTxgeDuvudu}
 \src{va}
-\meaning{\arthanonum{matetx huTaTxdiruvudu. mukitx. liMgAMga sAmarasayx. adhAyxtamxdalilx parxgati sAdhisi, niSAkxma kamaR mADidavanigaSeTxV huTuTxgeVDu sAdhayx:}
-\ullekha{matetx pAdoVdakava niVreYdu dharisiyAnu huTuTxgeTeTxnu basavaNaNx nimamx karuNadiMda (savasaM. 4; sidadhxrA. 1019-293).}}
+\meaning{\arthanonum{matetx huTaTxdiruvudu. mukitx. liMgAMgasAmarasayx. adhAyxtamxdalilx parxgati sAdhisi, niSAkxma kamaR mADidavanigaSeTxV huTuTxgeVDu sAdhayx:}
+\ullekha{matetx pAdoVdakavaniVreYdu dharisiyAnu huTuTxgeTeTxnu basavaNaNx nimamx karuNadiMda (savasaM. 4; sidadhxrA. 1019-293).}}
 \end{entry}
 
 \begin{entry}
@@ -1594,7 +1587,6 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \word{naTaTxliMga}
 \meaning{\arthanonum{guDiyalilx parxtiSAThxpisalapxTaTx liMga, sAthxvaraliMga, shivasharaNarige sAthxvaraliMgapUje niSidadhx.}}
 \end{entry}
-
 
 \begin{entry}
 \word{nishacxyada nijaEkatavx}
@@ -2564,5 +2556,55 @@ parxteyxVkisikoLaLxlAra. avaneV samayxgfjAcnxni (va.pa.koV. 355):}
 \src{va}
 \meaning{\arthanonum{jiVvanu kamaRPalagaLiMdAgi saMsAra baMdhanadalilx saMcAra mADutitxdedxVne eMdu BAvisidare adu Barxme. vAsatxvavAgi jiVvAtamxnu paramAtamxnAdudariMda avanige saMcAra sAdhayxveV ilalx. EkeMdare BwtavasutxgaLu oMdu parimita sathxLadiMda \hbox{inonxMdu} parimita parxdeVshakekx saMcarisuvaMte, aparimita paramAtamxnu saMcarisalu sAdhayxvilalx. jiVvAtamxnige tananx nijasavxrUpada arivAdAga tAnu saMcarisutetxVneMba BarxmeyU hoVgutatxde:}
 \ullekha{kAyaparxkaqti, jiVvaparxkaqti, BAvaparxkaqti, saMcAraBarxme muMcade, saMcita duHkamaRMgaLa paknitxyalilx kuLiLxrade (savasaM. 8; meVLige. 1663-549); idaraMceya tiLi, muMcu beVga, niHkaLaMka malilxkAjuRnana nisasxMgada kUTa.}}
+\end{entry}
+
+\begin{entry}
+\word{savxrUpa nirUpa}
+\src{va}
+\meaning{\arthanonum{savxrUpa eMdare deVha, nirUpa eMdare Atamx eMdu alaMkArikavAgi BAvisalAgide. Atamxkekx yAvudeV rUpavilalx Adudarimda adu nirUpa:}
+\ullekha{virahadalutapxtayxvAdavara, mAyada beVLuve hatitxtatxlA! savxrUpa nirUpaveMdariyaru (savasaM. 2; alalxma. 311-93).}}
+%\ullekha{aMdhakanu ODa hiDidu savxrUpava tA noVDuvaMte... (savasaM. 3; cenanxba. 881-268); hononxMDu BUta, heNoNxMdu BUta, maNoNxMdu BUta iMtiV tirxvidha BUtasavxrUparAda... (savasaM. 10; kADasi. 26-16); parxNavaveV paramAtamx savxrUpavAgi parameVshavxrana gwpayx muKa noVda. (savasaM. 11; toVMTasi. 206-100).}}
+\end{entry}
+
+\begin{entry}
+\word{sAsiradaLada amaqtada koDa}
+\src{va}
+\meaning{\arthanonum{sahasArxradalilxruva (barxhamxraMdharx) amaqtada sele (va.pa.koV. 409):}
+\ullekha{sAsiradaLada amaqtava koDa kAyitutx (savasaM. 5; haDapu. 1339-410).}}
+%siradaLakamalaveMdaDe sUsikoMDiruva mana... (savasaM. 5; haDaliM. 1341-412); AkAshada meVle EkAMta sULeya kaMDenayayx. A sULeya gaqhadalilx sAsiradaLa kamalamaMTapada kaMDenayayx... (savasaM. 10; jakakxNa. 1016-553); sAsiradaLakamalada nAdAtamxliMgadalilx mana liVyavAdaDe adeV parama rAjayoVgavayAyx. (savasaM. 11; savxtaMtarx. 1052-505); cijajxladiM majajxnakekxredu sAsiradaLakusumavaniTuTx sharaNeMdu mADuvenu... (savasaM. 12; deVshikeVM. 52-16).}}
+\end{entry}
+
+\begin{entry}
+\word{sidadhxparxsAdiya aMga}
+\src{va}
+\meaning{\arthanonum{jAcnxneVMdirxya, kameRVMdirxya matutx aMtaHkaraNagaLa saluvAgi sharaNanu parxsAdavanunx sivxVkarisade elalxvU shivana parxsAdaveMdU adu jAcnxneVMdirxyAdigaLanunx shudadhxmADutatxdeMdU tiLidu sivxVkarisidare aMthavana aMgavu sidadhxparxsAdiya aMgavenisikoLuLxtatxde. sidadhxparxsAdiyu parxpaMcadalilx parashivana parxsAdavananxlalxde matetxVnanUnx kANuvudilalx. avanu noVDuva noVTa, kANuva rUpu, keVLuva shabadx elalxvU avana parxkAra shivana parxsAdaveV:}
+\ullekha{karaNaMgaLicecxyilalxde koMbudu sidadhxparxsAdiya aMga (savasaM. 8, parxleMbaM. 118-48).}}
+\end{entry}
+
+\begin{entry}
+\word{hatutxpAtaka}
+\src{va}
+\meaning{\arthanonum{sharaNanige salalxda hatutx bageya pApakAyaRgaLu; jaMgamananunx avajecnx mADuvudu, jaMgamakekx saMdaBoRVcitavAgi beVkAdudanunx odagisadiruvudu, jaMgamakekx edurumAtugaLanAnxDuvudu, jaMgamada sakalAthaRgaLige odagadiruvudu, jaMgamaseVveyanunx tAnu mADideneMdu manasisxnalilx BAvisuvudu, jaMgamavanunx AkeSxVpisuvudu, jaMgamaveV liMgarUpaveMdu BAvisadiruvudu, jaMgamadoMdige suKasaMBASaNe mADadiruvudu, sakalapadAthaRgaLanUnx modalu jaMgamakekx apiRsade liMgApiRta mADuvudu matutx jaMgamapAdoVdaka parxsAdagaLanunx liMgakekx niVDi seVvisadiruvudu eMba hatutx riVtiya pApakAyaRgaLu (viV.pA.koV. 594):}
+\ullekha{...nimamx jaMgamada pAdoVdakaparxsAdavanu taMdu tananx liMgakekx koTuTxkoLadihudu hatatxneya pAtaka - iMtiV hatutx pAtakava kaLedalalxde Bakatxnalalx (savasaM. 3; cenanxba. 1312-465).}}
+\end{entry}
+
+\begin{entry}
+\word{hatutxpAdoVdaka}
+\src{va}
+\meaning{\arthanonum{dashapAdoVdaka. gurupAdoVdaka, liMgapAdoVdaka, jaMgamapAdoVdaka, sapxshaRnoVdaka, avadhAnoVdaka, ApAyxyanoVdaka, hasotxVdaka, pariNAmoVdaka, ninARmoVdaka matutx satoyxVdaka eMba dashavidhapAdoVdakagaLu:}
+\ullekha{viVramAheVshavxrarAdeDeyU kirxyApAdoVdakamAgabeVkAdaDe ...I parxkAradalilx hatutx pAdoVdakavu, shikASxpAdoVdakadalilx AguvudeMdu aridu Acarisuvudu (savasaM. 3; cenanxba. 1564-568).}}
+%\ullekha{satavxrajatamavanatigaLedavarigalalxde, hatutxpAdoVdakavanariyalaridu... (savasaM. 8; malilxpapxM. 1140-398).}}
+\end{entry}
+
+\begin{entry}
+\word{hadineMTudoVSa}
+\meaning{\arthanonum{huTuTx, sAvu, pirxVti, devxVSa, \hbox{vaqdAdhxpayx}, roVga, mada, moVha, sevxVda, BeVda, viSAda, niderx, kAMkeSx, hasivu, dAha, Barxme, ciMte matutx saMkelxVsha eMbudAgi manuSayxnige uMTAguva hadineMTu parxkArada doVSagaLu:}
+\ullekha{hadineMTu doVSaMgaLalilx tirxvidha malaMgaLalilx \hbox{tirxjAti} vaMshaBeVdadalilx tirxguNAtamxkanAreMbuda tiLidu (savasaM. 8; \hbox{parxsABoV.} 105-44); janana maraNa rAga devxVSa jare ruje mada moVha sevxVda BeVda viSAda nidArxkAMkeSx kuSxdhe taqSe Barxme ciMte saMkelxVshameMba hadineMTu doVSadiM dUSitamAgi (viveVka. 198).}}
+\end{entry}
+
+\begin{entry}
+\word{hadineMTupurANa}
+\meaning{\arthanonum{barxhamx, padamx, viSuNx, sheYva, BAgavata, nAradiVya, mAkaRMDeVya, AgenxVya, BaviSayxtutx, barxhamx\-veYvataR, liMga, varAha, sAkxMda, vAmana, kUmaR, matasxyX, garuDa matutx barxhAmxMDa eMba hadineMTu purANagaLu:}
+\ullekha{hadineMTu purANagaLu - barxhamxpurANa, padamxpurANa ...barxhAmxMDapurANa eMdive. ivugaLalilx sakxMda, sheYva, liMga, kUmaR, vAmana, varAha, BaviSayxtutx, matasxyX, mAkaRMDeVya, barxhAmxMDa ivu hatutx shiva\-purANagaLu (shivAkoV. 206-391).}}
 \end{entry}
 
