work in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1519,11 +1519,17 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \end{entry}
 
 \begin{entry}
-\word{savxtaMtirxyalalx, parataMtirxyalalx}
-\src{va}
-\meaning{\arthanonum{sAdhakanu tananxnunx parataMtirxyeMdU, paramAtamxnanunx savxtaMtirxyeMdU bagedu tananx Bakitxyanunx toVrisutitxrutAtxne. yAvudeV vasutx athavA vayxkitx savxtaMtarx eninxsi\-koLaLxbeVkAdare, Atananunx avalaMbisuva vasutxgaLu, vayxkitxgaLu irabeVkAgutatxde. savxtaMtarxvAda oMdeV vasutxvidudx adananxvalaMbisuva yAvudeV vasutxvilalxdidadxre, A \hbox{vasutx} savxtaMtarxvU alalx, parataMtarxvU alalx. adeV riVti yAvudeV vasutx parataMtarxveninxsikoLaLxbeVkAdare, adakekx Asharxya koDuva vasutx irabeVkAgutatxde. ivugaLa saMbaMdhavanunx tAyi-magu saMbaMdhakekx hoVlisabahudu. tAyi eninxsikoLaLxbeVkAdare avaLige maguvirabeVkAgutatxde, hAgeyeV magu irabeVkAdare tAyi irabeVkAgutatxde. Adare liMgAMgasAmarasayxda mUlaka paramAtamxnanunx sAvxnuBAvadiMda aritare, A paramAtamx savxtaMtirxyalalx, aritavanu parataMtirxyalalx. EkeMdare sAmarasayxdalilx jAcnxtaq, jecnxVyagaLa saMbaMdha aLisihoVgutatxde:}
-\ullekha{taninxMdarivaDe savxtaMtirxyalalx, idiriniMdarivaDe parataMtirxyalalx I uBayavaninxnAnxrige heVLuve? kaDaloLage kareda vAriyaMte, niHkaLaMka malilxkAjuRna (savasaM. 8; moVLimA. 1551-517).}}
-%\ullekha{niVvADisuva yaMtarxda taMtarxvalalxde savxtaMtirxyalalx... (savasaM. 7; guparxmaM. 360-122); nA naDevaDe savxtaMtirxyalalx... (savasaM. 8; manugu. 1083-365); nAnaridu kaMDeheneMdaDe savxtaMtirxyalalx. (savasaM. 8; moVLige. 1848-602); nAneMdaDe savxtaMtirxyalalx... (savasaM. 8; madhuva. 843-302).}}
+\word{savxparavariyada sathxla}
+\src{koV}
+\meaning{\arthanonum{nUroMdu sathxlagaLalilx oMdu; tananxnunx tAnu aritukoLuLxva haMta:}
+\ullekha{elalx tarada BinanxtegaLaDagi savxyaveMba nijasithxtiyanunx hoMdalu adu savxparavariyada sathxla (shivAkoV. 93-108).}}
+\end{entry}
+
+\begin{entry}
+\word{savxyacaraparavariyada sathxla}
+\src{koV}
+\meaning{\arthanonum{nUroMdu sathxlagaLalilx oMdu; BinanxBAvavu mareyAgi tananxnunx tAnu ariyuva sathxla:}
+\ullekha{savxyacaraparavariyadasathxlavu - idu liMgasavxrUpavu. jAcnxna guru liMga jaMgamasavxrUpada iSaTxmahAliMgada goVLakadalilx saMbaMdhapaDutatxde (shivAkoV. 125-166).}}
 \end{entry}
 
 \begin{entry}
@@ -1535,6 +1541,13 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \end{entry}
 
 \begin{entry}
+\word{savxyavanariyuvudu}
+\src{va}
+\meaning{\arthanonum{tananxnunx shivasavxrUpaneMdu ariyuvudu:}
+\ullekha{paravanaridalalxde savxyavanariyabAradu (savasaM. 4; maruraM. 1125-388).}}
+\end{entry}
+
+\begin{entry}
 \word{sAvadhAnasuKapariNAmi}
 \src{va}
 \meaning{\arthanonum{parxsAdisathxlada sAdhakanu tananx nirahaMkAraveMba hasatxdalilx shivaliMgavanunx kaMDu sAvadhAnaveMba Bakitxyanunx AcarisuvAga avanige tananx sumana hasatxdalilx muMdina sathxlada jaMgamaliMgavu kANisikoLuLxtatxde:}
@@ -1542,16 +1555,16 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \end{entry}
 
 \begin{entry}
-\word{sAvxnuBAva sananxdadhx}
+\word{sAvxnuBAvasananxdadhx}
 \src{va}
 \meaning{\arthanonum{jAcnxnaveMba beLakanunx pUje matitxtara kirxyegaLiMda noVDalu sAdhayx\-vilalx. adakekx sAvxnuBAva Avashayxka. kirxyegaLu namamxnunx sAtivxkaranAnxgi mADadidadxre sAvxnuBAva sAdhayxvilalx. sAvxnuBAvadalilx nAvu kANuva beLagu horaginadalalx, namamxlelxV avayxkatxvAgiruva beLaku:}
 \ullekha{sharaNatatigaLiMda karaNaMgaLa nivArisi iMtapapx kirxyApUje, bAhayxda sharxdedhx, jAcnxnada beLagu, sAvxnuBAva sananxdadhx (savasaM 5, moVLige 946-302).}}
 \end{entry}
 
 \begin{entry}
-\word{suKava nishecxYvudu}
+\word{suKava nishecxYsuvudu}
 \src{va}
-\meaning{\arthanonum{nishecxYsuvudu eMbudakekx KacitapaDisuvudu eMba sAmAnayx athaRvidadxrU, aneVka veVLe sAdhisuvudu, sAkASxtakxrisikoLuLxvudu eMba athaRdalilxyU adanunx baLasalAgutatxde. suMkada baMkaNaNxnu `suKavanunx nishecxYsalilalx, adu duHKakekx biVja' eMdu heVLuvAga adakekx `suKavanunx sAdhisidare, adu duHKakekx kAraNavAgutatxde' eMba parxshenxge utatxra hiVgide: nAvu suKa paTaTx meVle adanunx matetx matetx paDeyabeVkeMba Ase uMTAgutatxde. adanunx paDeyuvavaregU namage duHKa (kaSaTx) uMTAgutatxde. atiyAda suKadiMda namamx AroVgayx hALAgi, AgalU duHKa uMTAgabahudu. hiVge, suKavanunx sAdhisuvudariMda konege duHKa uMTAgutatxde eMba anuBavigaLa nuDiyalilx sAkaSuTx satayxvide (namamx suKavu kelavu veVLe itararige duHKa uMTumADutatxde) (va.pa.koV. 410).}
+\meaning{\arthanonum{nishecxYsuvudu eMbudakekx KacitapaDisuvudu eMba sAmAnayx athaRvidadxrU, aneVka veVLe sAdhisuvudu, sAkASxtakxrisikoLuLxvudu eMba athaRdalilxyU adanunx baLasalAgutatxde. suMkada baMkaNaNxnu `suKavanunx nishecxYsalilalx, adu duHKakekx biVja' eMdu heVLuvAga adakekx `suKavanunx sAdhisidare, adu duHKakekx kAraNavAgutatxde' eMbathaRvide. suKavu heVge duHKakekx kAraNavAgutatxde eMba parxshenxge utatxra hiVgide: nAvu suKa paTaTx meVle adanunx matetx matetx paDeyabeVkeMba Ase uMTAgutatxde. adanunx paDeyuvavaregU namage duHKa (kaSaTx) uMTAgutatxde. atiyAda suKadiMda namamx AroVgayx hALAgi, AgalU duHKa uMTAgabahudu. hiVge, suKavanunx sAdhisuvudariMda konege duHKa uMTAgutatxde eMba anuBavigaLa nuDiyalilx sAkaSuTx satayxvide (namamx suKavu kelavu veVLe itararige duHKa uMTumADutatxde) (va.pa.koV. 410).}
 \ullekha{suKava nishecxYsalilalx, adu duHKakekx biVja. duHKava nishecxYsalilalx, suKadoDalu (savasaM. 9; suMkada. 622-196).}}
 \end{entry}
 
@@ -1560,13 +1573,6 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \src{va}
 \meaning{\arthanonum{maheVshavxra sathxladalilx sAdhakanu apupx eMba tananx aMgadalilxruva subudidhx eMba hasatxdiMda guruliMgada bAyiyAda jihevxge ruciyanunx apiRsutAtxne. aMdare tananx nAlageyalelxV avanu guruliMga\-vanunx sAthxpisikoMDiruvudariMda, avana nAlagege baruva ruci\-yelalxvU adaralilxruva guruliMgakekx apiRtavAdaMteyeV. hiVge maheVshavxranu tananx subudidhxyanunx leVpisikoMDu guru\-liMgavanunx garxhisuvudariMda avanu subudidhxleVpagArxhaka maheV\-shavxranenisikoLuLxtAtxne, hAgU avanu shivaliMgavAgutAtxne:}
 \ullekha{guruliMgAMga subudidhxleVpagArxhaka maheVshavxra shivaliMgavAda (savasaM. 3; cenanxba. 1412-504).}}
-\end{entry}
-
-\begin{entry}
-\word{sumanaleVpagArxhaka pArxNaliMgi}
-\src{va}
-\meaning{\arthanonum{pArxNaliMgisathxladalilx sAdhakanu `vAyu' eMba tananx aMgadalilxruva sumana eMba hasatxdiMda jaMgamaliMgada bAyiyAda tavxgiMdirxyakekx sapxshaRvanunx apiRsutAtxne. aMdare, tananx camaRdalilxyeV avanu jaMgama\-liMgavanunx parxtiSAThxpisiruvudariMda, avana camaRvu paDeyuva sapxshaRvelalxvU adaralilxruva jaMgamaliMgakekx apiRtavAdaMteyeV. hiVge pArxNaliMgiyu tananx sumanavanunx leVpisi\-koMDu jaMgamaliMgada gArxhakanAgiruvudariMda, avananunx sumanaleVpagArxhakaneMdu kareyalAgutatxde. avanu muMde parxsAdaliMgadalilx aikayxvAgutAtxne:}
-\ullekha{jaMgamaliMgAMga sumanaleVpagArxhaka sharaNa mahAliMgavAda (savasaM. 3; cenanxba. 1412-504).}}
 \end{entry}
 
 %%ha
@@ -2569,7 +2575,7 @@ parxteyxVkisikoLaLxlAra. avaneV samayxgfjAcnxni (va.pa.koV. 355):}
 \begin{entry}
 \word{sAsiradaLada amaqtada koDa}
 \src{va}
-\meaning{\arthanonum{sahasArxradalilxruva (barxhamxraMdharx) amaqtada sele (va.pa.koV. 409):}
+\meaning{\arthanonum{sahasArxradalilxruva (barxhamxraMdharx) amaqtada sele:}
 \ullekha{sAsiradaLada amaqtava koDa kAyitutx (savasaM. 5; haDapu. 1339-410).}}
 %siradaLakamalaveMdaDe sUsikoMDiruva mana... (savasaM. 5; haDaliM. 1341-412); AkAshada meVle EkAMta sULeya kaMDenayayx. A sULeya gaqhadalilx sAsiradaLa kamalamaMTapada kaMDenayayx... (savasaM. 10; jakakxNa. 1016-553); sAsiradaLakamalada nAdAtamxliMgadalilx mana liVyavAdaDe adeV parama rAjayoVgavayAyx. (savasaM. 11; savxtaMtarx. 1052-505); cijajxladiM majajxnakekxredu sAsiradaLakusumavaniTuTx sharaNeMdu mADuvenu... (savasaM. 12; deVshikeVM. 52-16).}}
 \end{entry}
@@ -2608,3 +2614,24 @@ parxteyxVkisikoLaLxlAra. avaneV samayxgfjAcnxni (va.pa.koV. 355):}
 \ullekha{hadineMTu purANagaLu - barxhamxpurANa, padamxpurANa ...barxhAmxMDapurANa eMdive. ivugaLalilx sakxMda, sheYva, liMga, kUmaR, vAmana, varAha, BaviSayxtutx, matasxyX, mAkaRMDeVya, barxhAmxMDa ivu hatutx shiva\-purANagaLu (shivAkoV. 206-391).}}
 \end{entry}
 
+\begin{entry}
+\word{sUtaka nAlukx}
+\src{va}
+\meaning{\artha{shabadxsUtaki: tamage elAlx gotutx eMdu heVLikoLuLxva ajAcnxnigaLu. balalxvaru balalxru elalxretatx balalxru?}
+\ullekha{kUDalacenanxsaMgayayxnalilx shabadxsUtakigaLavaretatx balalxru? (savasaM. 3; cenanxba. 645-194).}
+\artha{liMgasUtaki: mAtumAtige liMgavenunxtatx adara mahatavx gotitxlalxdavanu:}
+\ullekha{liMga liMgaveMbava liMgasUtakiyayayx, jaMgama jaMgamaveMbava jaMgamasUtakiyayayx. parxsAda parxsAda\-veM parxsAdasUtakiyayAyx I tirxvidhasUtakiya mAta keVLalAgadu (savasaM. 3; cenanxba. 667-199).}
+\artha{jaMgamasUtaki: nijavAda jaMgama yAru eMdu tiLiyadeyeV mAtumAtige jaMgama jaMgama enunxvavanu.}
+\artha{parxsAdasUtaki: parxsAdada mahatavx gotitxlalxde A hesarinalilx padeV padeV AhAra, pAniVyagaLanunx sivxVkarisuvavanu.}}
+\end{entry}
+
+\begin{entry}
+\word{sUtakavAru}
+\meaning{\arthanonum{kulasUtaka, CalasUtaka, tanusUtaka, mana\-sUtaka, nenahu sUtaka matutx BAvasUtaka. sUtakaveMdare nAveV kalipxsikoMDa doVSagaLeV horatu sahaja doVSagaLalalx. ivugaLa vivara.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad obabx vayxkitx kiVLu kulakekx seVridadxre, avanige kulasUtakavide eMdathaR. meVlukulakekx seVridavaru avananunx muTuTxvudilalx.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad namamx aneVka sadABxvane, sadudedxVshagaLu namamx CaladiMdAgi vayxkatxvAguvudilalx. nAnu eSeTxV oLeLxyavanAgidadxrU, nananx viroVdhiya CaladiMdAgi nAnu avanige, avana kaDeyavarige karuNe toVrisuvudilalx. I riVtiya Cala oMdu sUtakavAgidudx adu namamx Atamxvanunx ashudadhx mADutatxde.}}
+\smallskip
+\newmeaning{\arthanonum{\qquad sAnxna mADadidadxre, muTATxgidadxre tanusUtakavAgutatxde; manasisxnalilx kAma korxVdha, mada itAyxdigaLidadxre, manasUtakavAgutatxde; arivu athavA nenahu, aneVka upAdhigaLiMdAgi asuKiyAgiruvudariMda, nenahusUtakakokxLagAgide eMdathaR. jiVvanige tAnu parxteyxVka eMba BAva baMdare adu BAvasUtaka (va.pa.koV. 415).}}
+\end{entry}
