ya-La one set corrections complete (Dr. Shivakumaraswamy verified sheets are pending)

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -2588,30 +2588,11 @@ parxteyxVkisikoLaLxlAra. avaneV samayxgfjAcnxni (va.pa.koV. 355):}
 \end{entry}
 
 \begin{entry}
-\word{hatutxpAtaka}
-\src{va}
-\meaning{\arthanonum{sharaNanige salalxda hatutx bageya pApakAyaRgaLu; jaMgamananunx avajecnx mADuvudu, jaMgamakekx saMdaBoRVcitavAgi beVkAdudanunx odagisadiruvudu, jaMgamakekx edurumAtugaLanAnxDuvudu, jaMgamada sakalAthaRgaLige odagadiruvudu, jaMgamaseVveyanunx tAnu mADideneMdu manasisxnalilx BAvisuvudu, jaMgamavanunx AkeSxVpisuvudu, jaMgamaveV liMgarUpaveMdu BAvisadiruvudu, jaMgamadoMdige suKasaMBASaNe mADadiruvudu, sakalapadAthaRgaLanUnx modalu jaMgamakekx apiRsade liMgApiRta mADuvudu matutx jaMgamapAdoVdaka parxsAdagaLanunx liMgakekx niVDi seVvisadiruvudu eMba hatutx riVtiya pApakAyaRgaLu (viV.pA.koV. 594):}
-\ullekha{...nimamx jaMgamada pAdoVdakaparxsAdavanu taMdu tananx liMgakekx koTuTxkoLadihudu hatatxneya pAtaka - iMtiV hatutx pAtakava kaLedalalxde Bakatxnalalx (savasaM. 3; cenanxba. 1312-465).}}
-\end{entry}
-
-\begin{entry}
 \word{hatutxpAdoVdaka}
 \src{va}
-\meaning{\arthanonum{dashapAdoVdaka. gurupAdoVdaka, liMgapAdoVdaka, jaMgamapAdoVdaka, sapxshaRnoVdaka, avadhAnoVdaka, ApAyxyanoVdaka, hasotxVdaka, pariNAmoVdaka, ninARmoVdaka matutx satoyxVdaka eMba dashavidhapAdoVdakagaLu:}
+\meaning{\arthanonum{dashapAdoVdaka. gurupAdoVdaka, liMgapAdoVdaka, jaMgamapAdoVdaka, sapxshaRnoVdaka, avadhAnoVdaka, ApAyxyanoVdaka, hasotxVdaka, pariNAmoVdaka, ninARmoVdaka matutx satoyxVdaka eMba hatutx riVtiya pAdoVdakagaLu:}
 \ullekha{viVramAheVshavxrarAdeDeyU kirxyApAdoVdakamAgabeVkAdaDe ...I parxkAradalilx hatutx pAdoVdakavu, shikASxpAdoVdakadalilx AguvudeMdu aridu Acarisuvudu (savasaM. 3; cenanxba. 1564-568).}}
 %\ullekha{satavxrajatamavanatigaLedavarigalalxde, hatutxpAdoVdakavanariyalaridu... (savasaM. 8; malilxpapxM. 1140-398).}}
-\end{entry}
-
-\begin{entry}
-\word{hadineMTudoVSa}
-\meaning{\arthanonum{huTuTx, sAvu, pirxVti, devxVSa, \hbox{vaqdAdhxpayx}, roVga, mada, moVha, sevxVda, BeVda, viSAda, niderx, kAMkeSx, hasivu, dAha, Barxme, ciMte matutx saMkelxVsha eMbudAgi manuSayxnige uMTAguva hadineMTu parxkArada doVSagaLu:}
-\ullekha{hadineMTu doVSaMgaLalilx tirxvidha malaMgaLalilx \hbox{tirxjAti} vaMshaBeVdadalilx tirxguNAtamxkanAreMbuda tiLidu (savasaM. 8; \hbox{parxsABoV.} 105-44); janana maraNa rAga devxVSa jare ruje mada moVha sevxVda BeVda viSAda nidArxkAMkeSx kuSxdhe taqSe Barxme ciMte saMkelxVshameMba hadineMTu doVSadiM dUSitamAgi (viveVka. 198).}}
-\end{entry}
-
-\begin{entry}
-\word{hadineMTupurANa}
-\meaning{\arthanonum{barxhamx, padamx, viSuNx, sheYva, BAgavata, nAradiVya, mAkaRMDeVya, AgenxVya, BaviSayxtutx, barxhamx\-veYvataR, liMga, varAha, sAkxMda, vAmana, kUmaR, matasxyX, garuDa matutx barxhAmxMDa eMba hadineMTu purANagaLu:}
-\ullekha{hadineMTu purANagaLu - barxhamxpurANa, padamxpurANa ...barxhAmxMDapurANa eMdive. ivugaLalilx sakxMda, sheYva, liMga, kUmaR, vAmana, varAha, BaviSayxtutx, matasxyX, mAkaRMDeVya, barxhAmxMDa ivu hatutx shiva\-purANagaLu (shivAkoV. 206-391).}}
 \end{entry}
 
 \begin{entry}
