ya to ha - all corrections are complete

--- a/mainfile.tex
+++ b/mainfile.tex
@@ -14,7 +14,8 @@
 \input macros
 %\input dictionary1 %for jss-001-281.tex
 %\input dictionary1
-\input anu-dictionary
+\input dictionary3
+%\input anu-dictionary
 \begin{document}
 %\fontsize{12pt}{14pt}\selectfont
 %\frontmatter
