a to ja; data received from nandish

--- a/mainfile.tex
+++ b/mainfile.tex
@@ -12,10 +12,13 @@
 
 
 \input macros
-%\input dictionary1 %for jss-001-281.tex
+\input final-dict
+%\input dictionary %for jss-001-281.tex
 %\input dictionary1
-\input dictionary3
+%\input dictionary3
 %\input anu-dictionary
+%\input dict-ta-ma-03042019
+%\input dict-ya-La-03042019
 \begin{document}
 %\fontsize{12pt}{14pt}\selectfont
 %\frontmatter
@@ -24,8 +27,9 @@
 
 \begin{multicols}{2}
 \setlength{\columnseprule}{.5pt}
-%\input tex-for-print/jss-001-281.tex
+\input tex-for-print/jss-001-281.tex
 \input tex-for-print/jss-282-501.tex
+\setcounter{page}{300}
 \input tex-for-print/ya-La.tex
 \newpage
 \input tex-for-print/anubandha-1.tex
